<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aye</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="helpbuttonsdescription">help me buttons</string>
    <string name="changebuttonsstring">Change Buttons</string>
    <string name="changeprofilestring">Change Profile</string>
	<string name="choose_category">Choose A Category:</string>
	<string name="listening_radius">Listening Radius</string>
	<string name="accept_btn">Accept</string>	
	<string name="resotre_btn">Restore</string>
</resources>
