<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    
    xmlns:aye="http://schemas.android.com/apk/lib/sonic.industries.aye"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lahtzanchange"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sonic.industries.aye.MainActivity" >

    <ImageButton
        android:id="@+id/ImageButton1"
        android:contentDescription="@string/helpbuttonsdescription"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="distressButtonHandler"
        android:src="@drawable/ic_action_name" />

    <ImageButton
        android:id="@+id/ImageButton3"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ImageButton1"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="17dp"
        android:contentDescription="@string/helpbuttonsdescription"
        android:onClick="distressButtonHandler"
        android:src="@drawable/ic_action_name" />

    <ImageButton
        android:id="@+id/ImageButton2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_above="@+id/ImageButton3"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/helpbuttonsdescription"
        android:onClick="distressButtonHandler"
        android:src="@drawable/ic_action_name" />

    <ImageButton
        android:id="@+id/ImageButton4"
        android:contentDescription="@string/helpbuttonsdescription"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignLeft="@+id/ImageButton3"
        android:layout_below="@+id/ImageButton3"
        android:layout_marginTop="16dp"
        android:onClick="distressButtonHandler"
        android:src="@drawable/ic_action_name" />

    <ImageButton
        android:id="@+id/ImageButton6"
        android:contentDescription="@string/helpbuttonsdescription"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignLeft="@+id/ImageButton5"
        android:layout_alignTop="@+id/ImageButton4"
        android:onClick="distressButtonHandler"
        android:src="@drawable/ic_action_name" />

    <ImageButton
        android:id="@+id/ImageButton8"
        android:contentDescription="@string/helpbuttonsdescription"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignLeft="@+id/ImageButton7"
        android:layout_alignTop="@+id/ImageButton6"
        android:layout_marginRight="17dp"
        android:onClick="distressButtonHandler"
        android:src="@drawable/ic_action_name" />

    <ImageButton
        android:id="@+id/ImageButton5"
        android:contentDescription="@string/helpbuttonsdescription"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_above="@+id/ImageButton4"
        android:layout_centerHorizontal="true"
        android:onClick="distressButtonHandler"
        android:src="@drawable/ic_action_name" />

    <ImageButton
        android:id="@+id/ImageButton7"
        android:contentDescription="@string/helpbuttonsdescription"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignRight="@+id/ImageButton2"
        android:layout_alignTop="@+id/ImageButton5"
        android:layout_marginRight="17dp"
        android:onClick="distressButtonHandler"
        android:src="@drawable/ic_action_name" />

    <Button
        android:id="@+id/buttonchange"
        android:contentDescription="@string/helpbuttonsdescription"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/profilechange"
        android:layout_alignRight="@+id/profilechange"
        android:layout_alignParentBottom="true"
        android:onClick="startButtonChangeActivity"
        android:text="@string/changebuttonsstring" />

    <Button
        android:id="@+id/profilechange"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_above="@+id/buttonchange"
        android:layout_alignLeft="@+id/ImageButton1"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/helpbuttonsdescription"
        android:onClick="startProfileChangeActivity"
        android:text="@string/changeprofilestring" />

</RelativeLayout>
